<resources>
    <string name="app_name">Finance Manager</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_products">Products</string>
    <string name="title_branches">Stores</string>
    <string name="title_categories">Menu</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_payment_done">Payment</string>
    <string name="title_item_screen">Item Screen</string>
    <string name="title_my_cart">My Cart</string>
    <string name="title_orders">Orders</string>
    <string name="title_pay">Payment</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_branch_selection">Select Branch</string>
    <string name="title_payment">Payment</string>
    <string name="title_profile">Profile</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_internet">Internet Not Available</string>
    <string name="title_order_tracking">Order Tracking</string>
    <!-- Messages -->
    <string name="msg_internet">Please enable your wifi or mobile data from settings</string>
    <string name="msg_user_not_log_in">Please Login</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_exit">Are you sure you want to exit?</string>
    <string name="title_clear_data">Clear data</string>
    <string name="msg_clear_data">Are you Sure?</string>
    <string name="msg_cart_empty">Your cart is empty</string>
    <string name="msg_order_proceed">Please wait while we verify your order</string>
    <string name="msg_item_detail">ITEM DETAILS</string>
    <string name="msg_loading">L O A D I N G</string>
    <string name="msg_order_failed">Sorry, your order could not be processed. Please try again.</string>
    <string name="msg_payment_cancel">Are you sure you want to go back?</string>
    <string name="msg_cancel_forgot_password">Are you sure you want to go back?</string>
    <string name="msg_forgot_password_completed">You\'r done!</string>
    <string name="msg_items_not_available">item(s) not available</string>
    <string name="msg_settings_not_available">Sorry, settings are currently unavailable</string>
    <string name="msg_payment_successful">Thank you for your payment\n Your order will be ready at</string>
    <string name="msg_remove_cart_item">Are you sure you want to delete this item?</string>
    <string name="msg_require_login">Please log in to place your order</string>
    <string name="msg_payment_unsuccessful">Sorry, your payment failed. Please try again</string>
    <string name="msg_pickup_text">Please pick your order in time to avoid any inconvenience</string>
    <string name="msg_continue_as_guest"><u>SKIP THIS STEP</u></string>
    <string name="msg_minimum_order_price">Minimum home delivery order should be</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button_long">Login with Facebook</string>
    <string name="msg_link_with_facebook">Link with Facebook</string>
    <string name="msg_search">Search...</string>
    <string name="msg_forgot_password"><u>Forgot Password</u></string>
    <string name="msg_city">City</string>
    <string name="msg_branch">Branch</string>
    <string name="msg_order_type">Select Order Type</string>
    <string name="msg_pickup">Pickup</string>
    <string name="msg_home_delivery">Home Delivery</string>
    <string name="msg_branch_not_selected">Branch Not Selected</string>
    <string name="msg_select_branch">Select Branch</string>
    <string name="msg_payment_gateway">PAY With EasyPay</string>
    <string name="msg_order_verifying">Verifying From Admin</string>
    <string name="msg_order_cancel">Order Cancelled</string>
    <string name="msg_order_preparing">Preparing Order</string>
    <string name="msg_order_dispatched">Order Dispatched</string>
    <string name="msg_order_ready">Order is Ready</string>
    <string name="msg_order_delivered">Order Delivered</string>
    <string name="msg_order_served">Order Served</string>
    <string name="msg_order_waiting_payment">Waiting For Payment</string>
    <string name="msg_login_enter_details">Log in to Add Details</string>
    <string name="msg_sign_in_using_email">Sign in Using Email</string>
    <string name="msg_profile_not_updated">No Changes to Perform</string>
    <string name="msg_profile_updated">User Profile Updated Successfully</string>

    <!-- Drawer -->
    <string name="drawer_menu">MENU</string>
    <string name="drawer_branches">BRANCHES</string>
    <string name="drawer_profile">PROFILE</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_orders">ORDERS</string>
    <!-- Errors -->
    <string name="err_connection_error">Connection Error</string>
    <string name="err_first_name">Enter a valid first name (e.g. Abc)</string>
    <string name="err_last_name">Enter a valid last name (e.g. Xyz)</string>
    <string name="err_user_name">Enter a valid username (e.g. username)</string>
    <string name="err_password">Enter at least 6 characters</string>
    <string name="err_retype_password">The passwords don\'t match</string>
    <string name="err_code">Enter a valid code</string>
    <string name="err_email">Enter a valid email</string>
    <string name="err_no_orders">No Orders</string>
    <string name="err_no_products">No Products</string>
    <string name="err_no_variants">Sorry, item(s) not available. Please try again.</string>
    <string name="err_address">Enter a valid address</string>
    <string name="err_contact_no">Enter a valid phone number (e.g. 03XX...)</string>
    <string name="err_image_not_selected">"You haven't picked a profile image"</string>
    <string name="err_image_size_large">Image size is too large. Maximum image size is %1$s KB.</string>
    <string name="err_image">Sorry, only images from internal storage are supported</string>
    <string name="err_network">Please check your network connection</string>
    <string name="err_push">Please wait while the app is initialized</string>
    <string name="err_unknown">Something went wrong</string>
    <string name="err_config">Some configuration settings are invalid</string>
    <!-- Hints -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_code">Code</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone_no">Phone No</string>
    <string name="hint_feedback">Please give your valuable feedback</string>
    <string name="hint_feedback2">Feedback</string>
    <!-- Temp Text -->
    <string name="temp_day">Monday</string>
    <string name="temp_proceed">PROCEED</string>
    <string name="temp_orders">ORDERS</string>
    <string name="text_currency">Currency</string>

    <!-- button -->
    <string name="button_save">Save</string>
    <string name="button_clear_data">Clear Data</string>
    <string name="button_clear_cache">Clear Cache</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_guest_sign_in">Guest User</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_ok">OK</string>
    <string name="button_finish">Finish</string>
    <string name="button_check_out">CHECKOUT</string>
    <string name="button_proceed">PROCEED</string>
    <string name="button_continue">Continue</string>
    <string name="button_pay">PAY</string>
    <string name="button_delete">Delete</string>
    <string name="button_retry">RETRY</string>
    <string name="button_edit_profile"><u>Edit</u></string>
    <string name="button_edit_done"><u>Done</u></string>
    <string name="button_orders">Orders</string>
    <string name="button_rewards">Rewards</string>
    <!-- Network Errors -->
    <string name="default_error">Some Error Occurred. Please try later…</string>
    <string name="network_error">Error Establishing Network Connection.</string>
    <string name="error_400">Bad Request. Please Check Your Parameters</string>
    <string name="error_401">Error! Please Check Your Parameters</string>
    <string name="error_500">Internal Server Error Occurred. Please Try Later..</string>
    <string name="error_406">Request Is Not Acceptable. Please Try Later..</string>
    <string name="error_204">No Content Found</string>
    <string name="msg_order_expired">Order Expired</string>
    <string name="feedback_thanking_note">Thankyou for your feedback</string>
    <string name="company"><b>A P P   I N S P I R E</b></string>
    <string name="hint_income">Income (in $)</string>
    <string name="hint_expense">Expense (in $)</string>
    <string name="hint_amount">Amount (in $)</string>
    <string name="note_currency"><b>Note:</b> This is only display currency. <u><i>\n(currency conversion is not enabled)</i></u></string>
    <!--Admob ids-->
    <string name="admob_app_id">ca-app-pub-8567160823440243~6793330292</string>
    <string name="admob_banner_id">ca-app-pub-8567160823440243/3873978323</string>
    <string name="admob_interstitial">ca-app-pub-8567160823440243/6852986140</string>
    <string name="fb_native">829718733864924_829834207186710</string>
    <!--<string name="fb_native">YOUR_PLACEMENT_ID</string>-->
    <string name="splash_text">Pocket Finance Manager</string>
</resources>
