<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:src="@drawable/income" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_income"
                style="@style/myTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_income"
                    style="@style/myEditText"
                    android:hint="@string/hint_income"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="25" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Income Source"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_incometype"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:popupBackground="@color/colorSpinnerBG"
                android:spinnerMode="dropdown" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_tag"
                style="@style/myTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_tag"
                    style="@style/myEditText"
                    android:hint="Tag"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_date"
                style="@style/myTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_date"
                    style="@style/myEditText"
                    android:clickable="true"
                    android:hint="Date"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="25" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_save"
                style="@style/simpleButton"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/button_save" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_expense"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</android.support.constraint.ConstraintLayout>